# XeSSEngine

./: CMakeLists.txt  USAGE.md
.same/: todos.md
Application/: Application.h  CMakeLists.txt
Core/: Exception.cpp  Logger.cpp  Logger.h  NonCopyable.h  Utils.h
Examples/BasicExample/: BasicExample.cpp  CMakeLists.txt
Examples/ShaderCompilerExample/: ShaderCompilerExample.cpp
Graphics/: Device.cpp  Device.h  Shader.cpp  Shader.h  ShaderManager.h  SwapChain.cpp  SwapChain.h
Graphics/ShaderCompiler/: CMakeLists.txt  ShaderCompiler.cpp  ShaderCompiler.h
SDK/XeSS_SDK_2.1.0/: README.md  third-party-programs.txt
SDK/XeSS_SDK_2.1.0/samples/basic_sample_super_resolution_dx11/: CMakeLists.txt  Main.cpp  README.md  basic_sample_d3d11.cpp  basic_sample_d3d11.h  stdafx.h
Shaders/Modern/: VariableRateShading_SM64.hlsl.txt  WaveIntrinsics_SM64.hlsl.txt  XeSSUpscale_SM64.hlsl.txt
XeSS/: CMakeLists.txt  XeSSContext.h
XeSSEngine/: CMakeLists.txt  README.md
XeSSEngine/Core/: CMakeLists.txt  Exception.h  Types.h  Utils.cpp
XeSSEngine/Examples/: CMakeLists.txt
XeSSEngine/Examples/BasicExample/: BasicExampleApp.h
XeSSEngine/Graphics/: CMakeLists.txt  Device.h
XeSSEngine/XeSS/: CMakeLists.txt  XeSSContext.cpp  XeSSTypes.h
include/: XeSSEngine.h
uploads/XeSS_SDK_2.1.0/samples/basic_sample_super_resolution_dx11/: stdafx.h
